added new ill & text
also remove normalize

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -118,6 +118,30 @@
             </div>
 
             <div class="feature-grid">
+
+                <div class="feature-card feature-small">
+                    <a href="minneapolis/index.html">
+                        <img src="images/minneapolis-feature.jpg" alt="" class="preview" />
+                        <div class="info">
+                            <img src="images/minneapolis-title.png" alt="" class="title" />
+                            <p class="text">As urban and buzzing as it gets, Minneapolis is never too far from its rural, rustic roots.</p>
+                            <div class="meta">Heritage<span>3.28.2016</span></div>
+
+                        </div>
+                    </a>
+                </div>
+
+                <div class="feature-card feature-small">
+                    <a href="tokyo/index.html">
+                        <img src="images/tokyo-feature.jpg" alt="" class="preview" />
+                        <div class="info">
+                            <img src="images/tokyo-title.png" alt="" class="title" />
+                            <p class="text">Mazes of shopping, sushi for breakfast, unexpected Buddha statues; the best way to take Tokyo in is to make no plans whatsoever.</p>
+                            <div class="meta">Photographer<span>3.28.2016</span></div>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="feature-card feature-small">
                     <a href="paris/index.html">
                         <img src="images/paris-preview.jpg" alt="" class="preview" />
@@ -125,7 +149,6 @@
                             <img src="images/paris-title.png" alt="" class="title" />
                             <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream.</p>
                             <div class="meta">Girls <span>3.10.2016</span></div>
-
                         </div>
                     </a>
                 </div>
@@ -148,29 +171,6 @@
                             <img src="images/havana-title.png" alt="" class="title" />
                             <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere.</p>
                             <div class="meta">Travel Log <span>3.10.2016</span></div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="feature-card feature-small">
-                    <a href="minneapolis/index.html">
-                        <img src="images/minneapolis-feature.jpg" alt="" class="preview" />
-                        <div class="info">
-                            <img src="images/paris-title.png" alt="" class="title" />
-                            <p class="text">MINNEAPOLIS - to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream.</p>
-                            <div class="meta">Minnesota <span>3.28.2016</span></div>
-
-                        </div>
-                    </a>
-                </div>
-
-                <div class="feature-card feature-small">
-                    <a href="tel-aviv/index.html">
-                        <img src="images/tokyo-feature.jpg" alt="" class="preview" />
-                        <div class="info">
-                            <img src="images/tel-aviv-title.png" alt="" class="title" />
-                            <p class="text">TOKYO - neighborhood destined to make you feel local, even simple gazpacho tastes better. Levinsky finds a moment to shine.</p>
-                            <div class="meta">TOKYO <span>3.28.2016</span></div>
                         </div>
                     </a>
                 </div>
