--- a/new-site/minneapolis/index.html
+++ b/new-site/minneapolis/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="../css/features.css" />
     <link rel="shortcut icon" href="../images/favicon.png">
@@ -145,10 +145,9 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill"><img src="images/havana-title-illo.png" alt="" style="max-width:278px;"></div>
-                        <h3>Photography by: Gabriel Flores<br />
-                         Written by: Gabriel Flores<br />
-                         Title Illustration by: Mark Sloan</h3>
+                        <div class="title-ill"><img src="images/minneapolis-title-illo.png" alt="" style="max-width:315px;"></div>
+                        <h3>Photography by: Ashley_Camper<br />
+                         Written by: Liz Gardner</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -205,36 +204,14 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Havana</h2>
-                        <p>I returned home from Cuba with a small bottle of 7 year rum, a half-smoked pack of Hollywood cigarettes and a few hand-thrown clay mugs from a local potter (to house the rum of course). These souvenirs embody what were possibly
-                            the most lively five days of my life, in a city I’ve always dreamt of visiting. What I found most inspiring about my days in Cuba were those late afternoons walking around the city, feeling immersed in everyday Havana, the
-                            sun piercing through the calles, children playing soccer around every crumbling corner, and the lingering thread of music, lacing through my steps from windows and passing cars.</p>
-
-                        <p>My friend Andrew Tyree, who founded the travel initiative Coast to Costa, asked me to join him and his group of 16 strangers on a 5-day trip to Cuba. Andrew ‘s vision and drive for Coast to Costa’s guided trips is one that I can
-                            highly relate to – travel with eagerness, experience the city as locals do and to fully submersing yourself in everything you experience while you’re there. We did nothing short of that.</p>
-
-                        <p>Arriving in Havana I immediately felt the energy radiating from the streets. Like any city, cars and people are bustling at all hours of the day. Abuelas and abuelos are out on their balconies hanging out their laundry. But unlike
-                            any other city I’ve ever visited, there are no banks, no grocery stores and you will very rarely find any internet. When you stop by a fresh coconut vendor, you might end up with an ice cold Crystal beer instead. After just
-                            a day or two the lifestyle sort overcomes you.</p>
-
-                        <p>As vibrant and alive as this country is, it does not always favor tourists. Trying to get somewhere? Be prepared for the car to break down. Getting directions? It’s likely you’ll misunderstand them. Old cars run on makeshift engines,
-                            the architecture that was once art-deco pristine condition is a distant memory. At some point, I just accepted it all. Experiencing Cuba as it is now, at the beginning of what will be some rapid change, gave me this overwhelming
-                            sense of love for the city exactly the way it is.</p>
-
-                        <p>Brandon, a friend and also one of the guides for Coast to Costa, told me while walking around taking photos; “the thing you’ll quickly realize is that everyone here is an entrepreneur.” During the day you can often find someone
-                            selling coconuts out of a small trailer cart or ice cream out of an ice chest strapped to the back of their bicycle. If you walk down the street, a guy may come up and say he saved your life from passing cars and request a
-                            CUP (Cuban Convertible Peso), and you might just have to give in. While wandering around a few streets just after dark one night I noticed how quickly you could buy a plate of food, candy or something to drink right out of
-                            someone’s front window. This culture survives off of so little and a little goes a long way.</p>
-
-                        <p>We stayed in a casa particular, a private apartment in a multi-level building in Old Havana. From the outside, the building looked shabby and in disrepair, but inside, beautiful tiled floors and colorful painted walls dressed with
-                            paintings made for a different impression. The balconies, looking over the busy street below, brought a sense of the outside in. When staying with our host families we quickly became a part of the family, relishing the home
-                            cooked Cuban breakfast, the beauty and the decay in the spaces, and the warmth that we were welcomed with. In Old Havana, whether it is day or night, the energy of the city is palpable. Families hanging around their stoops
-                            conversing with their neighbors. Un hombre viejo smoking a cigar whilst sweeping his steps. A woman carrying home a slab of raw meat with her bare hands from the corner butcher.</p>
-
-                        <p>On our last night, a group of us decided to head over to this old theater. A famous salsa band was playing and we knew it would it would be a night full of dancing. We hailed a couple cars and piled in. With all the windows down,
-                            car radio blaring, we sped down the road along the Malecón.</p>
-                        <p>This was Cuba, in every possible sense.</p>
-
+                        <h2>Minneapolis</h2>
+                        <p>Glacial history had a profound impact on Minnesota’s landscape. Tens of thousands of lakes, ponds, rivers, and streams were formed when gullies and valleys, carved out by advancing ice sheets, were filled with melt-off from receding glaciers. With their origins in the Dakota word minshota, which means  “clouds reflected in water”,  these waterways are Minnesota’s namesake.</p>
+                        <p>Although our lacustrine landscape is the state’s iconic feature, the legacy of glaciation is also found in the fertility of Minnesota’s fields and forests. Despite the extremes of the Nordic climes, this fecund land provided for the diverse indigenous peoples and later attracted industrious and resilient folk emigrating from northern Europe who saw, in the wild lakes and woods, a reflection of home.</p>
+                        <p>They settled into to life in Minnesota, on farms and in logging camps, with a culture of resourcefulness and a vigorous love of nature. From their woodlands and farmsteads came abundant lumber and grain. Powered by the mighty Mississippi, mills were established to transform timber into boards and grist into flour. Both land-based resources were instrumental in building and fueling a growing city: Minneapolis.</p>
+                        <p>The relationship between Minneapolis and the rural communities was not one simply of extraction. Industrially, it was marked by reciprocity. Culturally, they were akin. Whether laboring in rows of wheat or rye in Hallock or Cambridge or at a mill in Minneapolis, Minnesotans had a fierce work ethic and an ability to face adversity with innovation. Generations later, Minnesotans maintain an intimacy with nature and an unfettered exchange of population, culture, and goods between rural and urban areas. Small farming communities ringing the city continue to resist the industrial farming trend and grow food for their community, which includes the restaurants and neighborhood food cooperatives in Minneapolis.</p>
+                        <p>While farm to table has become de rigueur for restaurants across the nation, many of the homegrown chefs in Minnesota, such as Erick Harcey of Upton 43, not only make use of the fruits of local fields and forests, but also grew up in them. Harcey was raised in a small town outside of Minneapolis, and had lived and worked in the city before returning to the country to raise a family of his own. “I learned refinement in the city but when it comes to the food they are still all flavors I grew up with”, he says of the restaurant’s cuisine, which pays homage to Scandinavian heritage.</p>
+                        <p>A nod to heritage is also evident with a new surge of craft distilleries in the city center, as well as an estate distillery, Far North, in the northernmost reaches of the state.  After a decade of urban living, founders Cheri Reese and Michael Swanson returned to the family farmscape in Hallock, Minnesota. They established fields of rye and heirloom corn to fuel an estate distillery – unique the world over and the first of its kind in Minnesota. “A strong desire to live more simply, more seasonally, and more soulfully” inspired Reese and Swanson to move home and do “something meaningful with the family farm.”</p>
+                        <p>It is this straddling of worlds that defines Minnesota’s capital and its surroundings. Respecting tradition and yearning for simplicity. Drawing on heritage but with a modern gesture. Being urbane but with humility. Fetishing the beautiful – but of form and function. Moving as rhythmically and effortlessly as breathing from the city streets to wild landscapes of our youth.</p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -301,6 +278,32 @@
             <!-- IMAGE END -->
 
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>5 Questions with Chef Erick Harcey</h2>
+                        <h5>What is your first food memory?</h5>
+                        <p>I remember eating Sunday roasts with mashed potatoes. I pretty much looked forward to it every weekend.</p>
+                        <h5>Tell us about your Swedish roots.</h5>
+                        <p>My grandpa and his brothers emigrated from Sweden with my great grandparents. They spoke Swedish first and picked up English on the way. They were great cooks and had restaurants. Mostly, it was all about family. People would be hanging out and there would be ham in the oven and a whole bunch of food – basically a potluck all the time.</p>
+                        <h5>How does Upton 43 compare to famous Nordic establishments like Noma and Fäviken?</h5>
+                        <p>Magnus Nilsson of Fäviken and Rene Redzepi of Noma spend time outside and observe.  They know how things work in the wild and it influences the way they cook. What makes Upton different is that I am drawing from my own experience, my own memories.</p>
+                        <h5>What dishes on the menu are your interpretation of foods you grew up eating?</h5>
+                        <p>The meatballs and the pickled herring. The meatballs are virtually the same as my grandma made them. I changed the gravy - no one could make gravy as good as my grandma so I just had to do something different. But there are pickles and mashed potatoes with lots of butter - never skimp on the butter. The herring is a little different. At home we would have just put it on crackers.  I make a composed dish with different flavors and textures.</p>
+                        <h5>What do you want people to feel or experience at Upton 43?</h5>
+                        <p>“I want people to leave having had an amazing experience but they don’t know why because everything was perfect – the food, the space, the service.  It’s not about me telling them what to feel but providing them an opportunity to relate and pull on memories from when they were younger.”</p>
+
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -427,36 +430,36 @@
 
                         <h4>Eat: </h4>
 
-                        <h5><a href="http://www.laguarida.com/en/" target="_blank">Paladar La Guardia</a></h5>
-                        <p>A Cuban establishment, serving traditional and adventurous recipes.</p>
+                        <h5><a href="http://www.upton43.com" target="_blank">Upton 43</a></h5>
+                        <p>Chic atmosphere and Swedish-American cuisine. If possible, try to snag a seat at the Chef’s Table, to sample an adventurous prixe-fixe menu.</p>
 
-                        <h5><a href="https://www.facebook.com/paladardona.eutimia" target="_blank">Paladar Doña Eutemia</a></h5>
-                        <p>A centrally located, family-owned restaurant serving simple and straightforward Cuban cuisine.</p>
+                        <h5><a href="http://eskergrove.com" target="_blank">Esker Grove</a></h5>
+                        <p>A welcoming Cuban cafe with juicy Cubano sandwiches and invigorating coffee.</p>
 
-                        <h5><a href="http://www.lahabana.com/guide/museo-del-chocolate/" target="_blank">Museo del Chocolate</a></h5>
+                        <h5><a href="http://victors1959cafe.com" target="_blank">Victor’s 1959</a></h5>
                         <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks.</p>
 
                         <h4>Stay:</h4>
 
-                        <h5><a href="http://www.casaparticular.com/" target="_blank">Casas Particulares</a></h5>
-                        <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life.<a href="http://www.havanacasaparticular.com/" target="_blank">http://www.havanacasaparticular.com/</a></p>
+                        <h5><a href="http://www.almampls.com" target="_blank">Hotel Alma</a></h5>
+                        <p>A stylish urban inn located above a cafe by the same owners. The decor is cozy-meets-luxury.</p>
+
+                        <h5><a href="http://hewinghotel.com/" target="_blank">Hewing Hotel</a></h5>
+                        <p>Situated in a century-old brick-and-timber warehouse, this small hotel is decorated with historic touches and feels like an upscale lodge.</p>
 
                         <h4>Do:</h4>
 
-                        <h5><a href="http://www.bellasartes.cult.cu/" target="_blank">Museo Nacional de Bellas Artes</a></h5>
-                        <p>An expansive museum with collections from Spain, ancient Greece and modern-day Cuba.</p>
+                        <h5><a href="http://www.walkerart.org/" target="_blank">Walker Art Center</a></h5>
+                        <p>This important Minneapolis art hub displays modern art, multimedia installations and video, along with lectures and events.</p>
 
-                        <h5><a href="http://www.hemingwaycuba.com/finca-la-vigia.html" target="_blank">Museo Hemingway Finca Vigia</a></h5>
-                        <p>An intricate glimpse into the life of Ernest Hemingway, who once adopted Cuba as his home country.</p>
+                        <h5><a href="http://www.asimn.org/" target="_blank">Walker Art Center</a></h5>
+                        <p>This important Minneapolis art hub displays modern art, multimedia installations and video, along with lectures and events.</p>
 
-                        <h5>El Malecon</h5>
-                        <p>Havana’s boardwalk stretches alongside the city, offering a gallery of faces, sounds and images.<br/></p>
+                        <h5><a href="https://www.minneapolisparks.org/parks__destinations/parks__lakes/lake_calhoun_park/" target="_blank">Lake Calhoun</a></h5>
+                        <p>A favorite destination for locals, the lake is perfect for hiking, biking and kitesurfing.</p>
 
-
-                        <p>There are some excellent options for personalized, guided small group trips to Cuba if you don’t want to figure out logistics yourself.</p>
-                        <h5><a href="http://www.coasttocosta.com" target="_blank">Coast to Coasta</a></h5>
-                        <h5><a href="http://www.intrepidtravel.com" target="_blank">Intrepid Travel</a></h5>
-                        <h5><a href="http://www.elcamino.travel" target="_blank">El Camino</a></h5>
+                        <h5><a href="http://first-avenue.com/" target="_blank">Concert at First Avenue</a></h5>
+                        <p>Entertaining Minneapolis since 1970, the First Avenue is a popular live music ticket.</p>
 
 
                     </div>
