--- a/new-site/tokyo/index.html
+++ b/new-site/tokyo/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="../css/features.css" />
     <link rel="shortcut icon" href="../images/favicon.png">
@@ -144,10 +144,9 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill"><img src="images/havana-title-illo.png" alt="" style="max-width:278px;"></div>
-                        <h3>Photography by: Gabriel Flores<br />
-                         Written by: Gabriel Flores<br />
-                         Title Illustration by: Mark Sloan</h3>
+                        <div class="title-ill"><img src="images/tokyo-title-illo.png" alt="" style="max-width:218px;"></div>
+                        <h3>Photography by: Emily Shur<br />
+                         Written by: Emily Shur</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -192,53 +191,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Havana</h2>
-                        <p>I returned home from Cuba with a small bottle of 7 year rum, a half-smoked pack of Hollywood cigarettes and a few hand-thrown clay mugs from a local potter (to house the rum of course). These souvenirs embody what were possibly
-                            the most lively five days of my life, in a city I’ve always dreamt of visiting. What I found most inspiring about my days in Cuba were those late afternoons walking around the city, feeling immersed in everyday Havana, the
-                            sun piercing through the calles, children playing soccer around every crumbling corner, and the lingering thread of music, lacing through my steps from windows and passing cars.</p>
-
-                        <p>My friend Andrew Tyree, who founded the travel initiative Coast to Costa, asked me to join him and his group of 16 strangers on a 5-day trip to Cuba. Andrew ‘s vision and drive for Coast to Costa’s guided trips is one that I can
-                            highly relate to – travel with eagerness, experience the city as locals do and to fully submersing yourself in everything you experience while you’re there. We did nothing short of that.</p>
-
-                        <p>Arriving in Havana I immediately felt the energy radiating from the streets. Like any city, cars and people are bustling at all hours of the day. Abuelas and abuelos are out on their balconies hanging out their laundry. But unlike
-                            any other city I’ve ever visited, there are no banks, no grocery stores and you will very rarely find any internet. When you stop by a fresh coconut vendor, you might end up with an ice cold Crystal beer instead. After just
-                            a day or two the lifestyle sort overcomes you.</p>
-
-                        <p>As vibrant and alive as this country is, it does not always favor tourists. Trying to get somewhere? Be prepared for the car to break down. Getting directions? It’s likely you’ll misunderstand them. Old cars run on makeshift engines,
-                            the architecture that was once art-deco pristine condition is a distant memory. At some point, I just accepted it all. Experiencing Cuba as it is now, at the beginning of what will be some rapid change, gave me this overwhelming
-                            sense of love for the city exactly the way it is.</p>
-
-                        <p>Brandon, a friend and also one of the guides for Coast to Costa, told me while walking around taking photos; “the thing you’ll quickly realize is that everyone here is an entrepreneur.” During the day you can often find someone
-                            selling coconuts out of a small trailer cart or ice cream out of an ice chest strapped to the back of their bicycle. If you walk down the street, a guy may come up and say he saved your life from passing cars and request a
-                            CUP (Cuban Convertible Peso), and you might just have to give in. While wandering around a few streets just after dark one night I noticed how quickly you could buy a plate of food, candy or something to drink right out of
-                            someone’s front window. This culture survives off of so little and a little goes a long way.</p>
-
-                        <p>We stayed in a casa particular, a private apartment in a multi-level building in Old Havana. From the outside, the building looked shabby and in disrepair, but inside, beautiful tiled floors and colorful painted walls dressed with
-                            paintings made for a different impression. The balconies, looking over the busy street below, brought a sense of the outside in. When staying with our host families we quickly became a part of the family, relishing the home
-                            cooked Cuban breakfast, the beauty and the decay in the spaces, and the warmth that we were welcomed with. In Old Havana, whether it is day or night, the energy of the city is palpable. Families hanging around their stoops
-                            conversing with their neighbors. Un hombre viejo smoking a cigar whilst sweeping his steps. A woman carrying home a slab of raw meat with her bare hands from the corner butcher.</p>
-
-                        <p>On our last night, a group of us decided to head over to this old theater. A famous salsa band was playing and we knew it would it would be a night full of dancing. We hailed a couple cars and piled in. With all the windows down,
-                            car radio blaring, we sped down the road along the Malecón.</p>
-                        <p>This was Cuba, in every possible sense.</p>
-
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
-
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -276,6 +228,7 @@
             </picture>
             <!-- IMAGE END -->
 
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -295,7 +248,25 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
 
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Tokyo</h2>
+                        <p>I first visited Japan in 2004. Since then, I’ve returned at least once or twice a year solely to take pictures.  I had no intention of beginning any sort of project when I took that first trip, but the body of work I’ve made there has only been growing, completely organically. Since I make a living as a commercial photographer, it’s important to me that the way I take pictures there remains stress-free. I try not to censor myself or think too much when I’m shooting.</p>
+                        <p>I’ve traveled fairly extensively throughout Japan and keep a running list for future trips, but Tokyo has remained a constant wealth of inspiration over the past twelve years. There are so many layers to get through to even make a dent in “knowing” the city. To friends who are planning their first trip to Japan and want suggestions, I always say: “You could spend your entire trip in Tokyo and never get bored”.</p>
+                        <p>Tokyo is all things—beautiful, gritty, futuristic, traditional, urban, natural, challenging, tranquil, indulgent, weird, comforting. In a nutshell, Tokyo is all about exploring and not getting too weighed down with plans. Addresses and specific buildings are sometimes hard to find.  It can be frustrating.  Instead, just pick neighborhoods you want to explore and let the day take you where it takes you.</p>
+
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -405,57 +376,6 @@
             </picture>
             <!-- IMAGE END -->
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption">
-
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Resources</h2>
-
-                        <h4>Eat: </h4>
-
-                        <h5><a href="http://www.laguarida.com/en/" target="_blank">Paladar La Guardia</a></h5>
-                        <p>A Cuban establishment, serving traditional and adventurous recipes.</p>
-
-                        <h5><a href="https://www.facebook.com/paladardona.eutimia" target="_blank">Paladar Doña Eutemia</a></h5>
-                        <p>A centrally located, family-owned restaurant serving simple and straightforward Cuban cuisine.</p>
-
-                        <h5><a href="http://www.lahabana.com/guide/museo-del-chocolate/" target="_blank">Museo del Chocolate</a></h5>
-                        <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks.</p>
-
-                        <h4>Stay:</h4>
-
-                        <h5><a href="http://www.casaparticular.com/" target="_blank">Casas Particulares</a></h5>
-                        <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life.<a href="http://www.havanacasaparticular.com/" target="_blank">http://www.havanacasaparticular.com/</a></p>
-
-                        <h4>Do:</h4>
-
-                        <h5><a href="http://www.bellasartes.cult.cu/" target="_blank">Museo Nacional de Bellas Artes</a></h5>
-                        <p>An expansive museum with collections from Spain, ancient Greece and modern-day Cuba.</p>
-
-                        <h5><a href="http://www.hemingwaycuba.com/finca-la-vigia.html" target="_blank">Museo Hemingway Finca Vigia</a></h5>
-                        <p>An intricate glimpse into the life of Ernest Hemingway, who once adopted Cuba as his home country.</p>
-
-                        <h5>El Malecon</h5>
-                        <p>Havana’s boardwalk stretches alongside the city, offering a gallery of faces, sounds and images.<br/></p>
-
-
-                        <p>There are some excellent options for personalized, guided small group trips to Cuba if you don’t want to figure out logistics yourself.</p>
-                        <h5><a href="http://www.coasttocosta.com" target="_blank">Coast to Coasta</a></h5>
-                        <h5><a href="http://www.intrepidtravel.com" target="_blank">Intrepid Travel</a></h5>
-                        <h5><a href="http://www.elcamino.travel" target="_blank">El Camino</a></h5>
-
-
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -532,6 +452,58 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption">
+
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Resources</h2>
+
+                        <h4>Eat: </h4>
+
+                        <h5><a href="http://www.tsukiji.or.jp/english/" target="_blank">Tsukiji Outer Market</a></h5>
+                        <p>Sushi and beer for breakfast? Yes, if you’re visiting this traditional food market.</p>
+
+                        <h5><a href="http://isetan.mistore.jp/store/shinjuku/foreign_customer/index.html" target="_blank">Isetan Shinjuku</a></h5>
+                        <p>For lunch, try a common Tokyo food hall, the ‘depachika’. Found in department stores, depachikas offer dazzling choices, and the one in the basement of Isetan Shinjuku is especially good. </p>
+
+                        <h5><a href="http://higashiyama-tokyo.jp/" target="_blank">Higashi-Yama Tokyo</a></h5>
+                        <p>A stylish dinner destination, this restaurant specializes in seasonal Japanese cuisine. Go for the set menu.</p>
+
+                        <h4>Stay:</h4>
+
+                        <h5><a href="http://www.claska.com/en/" target="_blank">Claska</a></h5>
+                        <p>Located in the sought-after Meguro district, this hotel is both affordable and trendy. The clean, minimal design is a nice break from the city.</p>
+
+                        <h5><a href="http://www.hotelokura.co.jp/tokyo/en/" target="_blank">Hotel Okura</a></h5>
+                        <p>An older, more established hotel with plenty of upscale, classic dining options.</p>
+
+                        <h5><a href="https://www.aman.com/resorts/aman-tokyo" target="_blank">Aman Tokyo</a></h5>
+                        <p>A part of the lucrative Aman Resorts chain, this hotel is straight up luxury, from the design to the handmade chocolate welcoming you to the room.</p>
+
+                        <h4>Do:</h4>
+
+                        <h5>Tokyo’s parks and gardens</h5>
+                        <p>Visit them all. Some of my favorites are Rikugien Garden, Yoyogi Park, Imperial Palace Gardens, and Hama Rikyu.</p>
+
+                        <h5><a href="http://real.tsite.jp/daikanyama/english/" target="_blank">Shopping</a></h5>
+                        <p>For photo books, head to  Daikanyama Tsutaya Books and for vintage clothes, to Koenji neighborhood. If you visit during off-peak hours, the Yodobashi Camera store in the Akihabara district will blow your mind.</p>
+
+                        <h5><a href="https://www.jnto.go.jp/eng/spot/bridges/rainbowbridge.html" target="_blank">Rainbow Bridge and Odaiba Island</a></h5>
+                        <p>Cross the bridge and check out the architecture on the waterfront. </p>
+
+                        <h5><a href="http://www.japanvisitor.com/japan-temples-shrines/ushiku-daibutsu" target="_blank">Ushiku Daibutsu</a></h5>
+                        <p>This is a 120 meter tall Buddha statue you can go inside of, across the street from an outlet mall. Tokyo at its best.</p>
+
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
