--- a/new-site/minneapolis/index.html
+++ b/new-site/minneapolis/index.html
@@ -146,7 +146,7 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/minneapolis-title-illo.png" alt="" style="max-width:315px;"></div>
-                        <h3>Photography by: Ashley_Camper<br />
+                        <h3>Photography by: Ashley Camper<br />
                          Written by: Liz Gardner</h3>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
                 <!--END INTERVIEW -->
             </div>
             <!-- END BOX -->
-            
+
         </div>
         <!-- end wrapper div -->
     </div>
