--- a/new-site/minneapolis/index.html
+++ b/new-site/minneapolis/index.html
@@ -147,7 +147,8 @@
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/minneapolis-title-illo.png" alt="" style="max-width:315px;"></div>
                         <h3>Photography by: Ashley Camper<br />
-                         Written by: Liz Gardner</h3>
+                         Written by: Jill Livingston<br />
+                         Creative Direction by: Liz Gardner</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
