--- a/new-site/index.html
+++ b/new-site/index.html
@@ -98,7 +98,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="https://alitedesigns.com/collections/californiamade" target="_blank">Shop</a></span>
             </div>
         </div>
 
@@ -119,6 +119,17 @@
 
             <div class="feature-grid">
 
+              <div class="feature-card feature-small">
+                  <a href="tokyo/index.html">
+                      <img src="images/tokyo-feature.jpg" alt="" class="preview" />
+                      <div class="info">
+                          <img src="images/tokyo-title.png" alt="" class="title" />
+                          <p class="text">Mazes of shopping, sushi for breakfast, unexpected Buddha statues; the best way to take Tokyo in is to make no plans whatsoever.</p>
+                          <div class="meta">Photographer<span>3.28.2016</span></div>
+                      </div>
+                  </a>
+              </div>
+
                 <div class="feature-card feature-small">
                     <a href="minneapolis/index.html">
                         <img src="images/minneapolis-feature.jpg" alt="" class="preview" />
@@ -126,18 +137,6 @@
                             <img src="images/minneapolis-title.png" alt="" class="title" />
                             <p class="text">As urban and buzzing as it gets, Minneapolis is never too far from its rural, rustic roots.</p>
                             <div class="meta">Heritage<span>3.28.2016</span></div>
-
-                        </div>
-                    </a>
-                </div>
-
-                <div class="feature-card feature-small">
-                    <a href="tokyo/index.html">
-                        <img src="images/tokyo-feature.jpg" alt="" class="preview" />
-                        <div class="info">
-                            <img src="images/tokyo-title.png" alt="" class="title" />
-                            <p class="text">Mazes of shopping, sushi for breakfast, unexpected Buddha statues; the best way to take Tokyo in is to make no plans whatsoever.</p>
-                            <div class="meta">Photographer<span>3.28.2016</span></div>
                         </div>
                     </a>
                 </div>
@@ -227,7 +226,7 @@
               <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
               <h3>A casual camera bag for  photographers</h3>
               <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
-              <a href="https://www.alitedesigns.com/"><button>Preorder</button></a>
+              <a href="https://www.alitedesigns.com/collections/californiamade"><button>Preorder</button></a>
             </div>
           </div>
 
