--- a/new-site/tokyo/index.html
+++ b/new-site/tokyo/index.html
@@ -146,7 +146,8 @@
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/tokyo-title-illo.png" alt="" style="max-width:218px;"></div>
                         <h3>Photography by: Emily Shur<br />
-                         Written by: Emily Shur</h3>
+                         Written by: Emily Shur<br />
+                         Design by: Locksin Chong</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
