--- a/new-site/index.html
+++ b/new-site/index.html
@@ -134,7 +134,7 @@
                     <a href="minneapolis/index.html">
                         <img src="images/minneapolis-feature.jpg" alt="" class="preview" />
                         <div class="info">
-                            <img src="images/minneapolis-title.png" alt="" class="title" />
+                            <img src="images/minneapolis-title.png" alt="" class="title title-wide" />
                             <p class="text">As urban and buzzing as it gets, Minneapolis is never too far from its rural, rustic roots.</p>
                             <div class="meta">Heritage<span>4.4.2017</span></div>
                         </div>
