--- a/new-site/minneapolis/index.html
+++ b/new-site/minneapolis/index.html
@@ -133,7 +133,7 @@
                 <source srcset="images/01_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/01_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/01_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
@@ -172,7 +172,7 @@
                 <source srcset="images/02_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/02_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/02_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -191,7 +191,7 @@
                 <source srcset="images/03_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/03_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/03_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
@@ -234,9 +234,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/04_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/04_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/04_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/04_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -254,7 +253,7 @@
                 <source srcset="images/05_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/05_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
@@ -272,9 +271,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/06_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/06_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/06_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
@@ -294,7 +292,7 @@
                 <source srcset="images/07_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/07_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/07_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
@@ -340,7 +338,7 @@
                 <source srcset="images/08_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/08_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/08_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
         </div>
         <!-- end wrapper div -->
@@ -357,7 +355,7 @@
                 <source srcset="images/09_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/09_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/09_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -376,7 +374,7 @@
                 <source srcset="images/10_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/10_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/10_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -395,7 +393,7 @@
                 <source srcset="images/11_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/11_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/11_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -414,7 +412,7 @@
                 <source srcset="images/12_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/12_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/12_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/12_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
@@ -484,7 +482,7 @@
                 <source srcset="images/13_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/13_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/13_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/13_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -502,7 +500,7 @@
                 <source srcset="images/14_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/14_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/14_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/14_Minneapolis_Ashley_Camper_Liz_Gardner_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Minneapolis, Ashley Camper">
             </picture>
             <!-- IMAGE END -->
 
