--- a/new-site/tokyo/index.html
+++ b/new-site/tokyo/index.html
@@ -132,7 +132,7 @@
                 <source srcset="images/01_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/01_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/01_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -170,7 +170,7 @@
                 <source srcset="images/02_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/02_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/02_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -188,7 +188,7 @@
                 <source srcset="images/03_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/03_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/03_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -207,7 +207,7 @@
                 <source srcset="images/04_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/04_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/04_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -225,7 +225,7 @@
                 <source srcset="images/05_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/05_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -245,7 +245,7 @@
                 <source srcset="images/06_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/06_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -284,7 +284,7 @@
                 <source srcset="images/07_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/07_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/07_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -302,7 +302,7 @@
                 <source srcset="images/08_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/08_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/08_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
         </div>
         <!-- end wrapper div -->
@@ -319,7 +319,7 @@
                 <source srcset="images/09_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/09_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/09_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -337,7 +337,7 @@
                 <source srcset="images/10_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/10_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/10_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -355,7 +355,7 @@
                 <source srcset="images/11_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/11_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/11_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -373,7 +373,7 @@
                 <source srcset="images/12_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/12_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/12_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/12_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -392,7 +392,7 @@
                 <source srcset="images/13_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/13_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/13_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/13_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -410,7 +410,7 @@
                 <source srcset="images/14_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/14_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/14_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/14_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -429,7 +429,7 @@
                 <source srcset="images/15_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/15_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/15_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/15_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -449,7 +449,7 @@
                 <source srcset="images/16_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/16_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/16_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/16_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -521,7 +521,7 @@
                 <source srcset="images/17_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/17_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/17_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/17_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -541,7 +541,7 @@
                 <source srcset="images/18_Tokyo_Emily_Shur_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/18_Tokyo_Emily_Shur_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/18_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
+                <img srcset="images/18_Tokyo_Emily_Shur_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
             </picture>
             <!-- IMAGE END -->
 
@@ -697,15 +697,15 @@
             }, {
                 duration: 1000
             }, "easeInOutQuint"); // OUT
-            $("#page12").velocity({
+            $("#page16").velocity({
                 opacity: 1
             }, {
                 display: "block"
             }, {
                 duration: 1000
             }, "easeInOutQuint"); // IN
-            pageCount = 11;
-            pageNext = 11;
+            pageCount = 15;
+            pageNext = 15;
           }
         }
 
