mine text changes

--- a/new-site/minneapolis/index.html
+++ b/new-site/minneapolis/index.html
@@ -148,7 +148,8 @@
                         <div class="title-ill"><img src="images/minneapolis-title-illo.png" alt="" style="max-width:315px;"></div>
                         <h3>Photography by: Ashley Camper<br />
                          Written by: Jill Livingston<br />
-                         Creative Direction by: Liz Gardner</h3>
+                         Creative Direction by: Liz Gardner<br/>
+                         Model: Alexa Carlson from <a href="http://www.ignite-models.com/" target="_blank">Ignite Models</a></h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -212,7 +213,7 @@
                         <p>The relationship between Minneapolis and the rural communities was not one simply of extraction. Industrially, it was marked by reciprocity. Culturally, they were akin. Whether laboring in rows of wheat or rye in Hallock or Cambridge or at a mill in Minneapolis, Minnesotans had a fierce work ethic and an ability to face adversity with innovation. Generations later, Minnesotans maintain an intimacy with nature and an unfettered exchange of population, culture, and goods between rural and urban areas. Small farming communities ringing the city continue to resist the industrial farming trend and grow food for their community, which includes the restaurants and neighborhood food cooperatives in Minneapolis.</p>
                         <p>While farm to table has become de rigueur for restaurants across the nation, many of the homegrown chefs in Minnesota, such as Erick Harcey of Upton 43, not only make use of the fruits of local fields and forests, but also grew up in them. Harcey was raised in a small town outside of Minneapolis, and had lived and worked in the city before returning to the country to raise a family of his own. “I learned refinement in the city but when it comes to the food they are still all flavors I grew up with”, he says of the restaurant’s cuisine, which pays homage to Scandinavian heritage.</p>
                         <p>A nod to heritage is also evident with a new surge of craft distilleries in the city center, as well as an estate distillery, Far North, in the northernmost reaches of the state.  After a decade of urban living, founders Cheri Reese and Michael Swanson returned to the family farmscape in Hallock, Minnesota. They established fields of rye and heirloom corn to fuel an estate distillery – unique the world over and the first of its kind in Minnesota. “A strong desire to live more simply, more seasonally, and more soulfully” inspired Reese and Swanson to move home and do “something meaningful with the family farm.”</p>
-                        <p>It is this straddling of worlds that defines Minnesota’s capital and its surroundings. Respecting tradition and yearning for simplicity. Drawing on heritage but with a modern gesture. Being urbane but with humility. Fetishing the beautiful – but of form and function. Moving as rhythmically and effortlessly as breathing from the city streets to wild landscapes of our youth.</p>
+                        <p>It is this straddling of worlds that defines Minneapolis and its surroundings. Respecting tradition and yearning for simplicity. Drawing on heritage but with a modern gesture. Being urbane but with humility. Fetishing the beautiful – but of form and function. Moving as rhythmically and effortlessly as breathing from the city streets to wild landscapes of our youth.</p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -276,6 +277,34 @@
             </picture>
             <!-- IMAGE END -->
 
+
+                        <!-- BOX  INTERVIEW-->
+                        <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+
+                            <!-- CAPTION -->
+                            <!-- LEFT CAPTION -->
+                            <div class="pg-box-content">
+                                <!-- CONTENT -->
+                                <!-- INTERVIW -->
+                                <div id="pg-interview">
+                                    <h2>5 Questions with Chef Erick Harcey</h2>
+                                    <h5>What is your first food memory?</h5>
+                                    <p>I remember eating Sunday roasts with mashed potatoes. I pretty much looked forward to it every weekend.</p>
+                                    <h5>Tell us about your Swedish roots.</h5>
+                                    <p>My grandpa and his brothers emigrated from Sweden with my great grandparents. They spoke Swedish first and picked up English on the way. They were great cooks and had restaurants. Mostly, it was all about family. People would be hanging out and there would be ham in the oven and a whole bunch of food – basically a potluck all the time.</p>
+                                    <h5>How does Upton 43 compare to famous Nordic establishments like Noma and Fäviken?</h5>
+                                    <p>Magnus Nilsson of Fäviken and Rene Redzepi of Noma spend time outside and observe.  They know how things work in the wild and it influences the way they cook. What makes Upton different is that I am drawing from my own experience, my own memories.</p>
+                                    <h5>What dishes on the menu are your interpretation of foods you grew up eating?</h5>
+                                    <p>The meatballs and the pickled herring. The meatballs are virtually the same as my grandma made them. I changed the gravy - no one could make gravy as good as my grandma so I just had to do something different. But there are pickles and mashed potatoes with lots of butter - never skimp on the butter. The herring is a little different. At home we would have just put it on crackers.  I make a composed dish with different flavors and textures.</p>
+                                    <h5>What do you want people to feel or experience at Upton 43?</h5>
+                                    <p>“I want people to leave having had an amazing experience but they don’t know why because everything was perfect – the food, the space, the service.  It’s not about me telling them what to feel but providing them an opportunity to relate and pull on memories from when they were younger.”</p>
+
+                                </div>
+                            </div>
+                            <!--END INTERVIEW -->
+                        </div>
+                        <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -296,32 +325,6 @@
             </picture>
             <!-- IMAGE END -->
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>5 Questions with Chef Erick Harcey</h2>
-                        <h5>What is your first food memory?</h5>
-                        <p>I remember eating Sunday roasts with mashed potatoes. I pretty much looked forward to it every weekend.</p>
-                        <h5>Tell us about your Swedish roots.</h5>
-                        <p>My grandpa and his brothers emigrated from Sweden with my great grandparents. They spoke Swedish first and picked up English on the way. They were great cooks and had restaurants. Mostly, it was all about family. People would be hanging out and there would be ham in the oven and a whole bunch of food – basically a potluck all the time.</p>
-                        <h5>How does Upton 43 compare to famous Nordic establishments like Noma and Fäviken?</h5>
-                        <p>Magnus Nilsson of Fäviken and Rene Redzepi of Noma spend time outside and observe.  They know how things work in the wild and it influences the way they cook. What makes Upton different is that I am drawing from my own experience, my own memories.</p>
-                        <h5>What dishes on the menu are your interpretation of foods you grew up eating?</h5>
-                        <p>The meatballs and the pickled herring. The meatballs are virtually the same as my grandma made them. I changed the gravy - no one could make gravy as good as my grandma so I just had to do something different. But there are pickles and mashed potatoes with lots of butter - never skimp on the butter. The herring is a little different. At home we would have just put it on crackers.  I make a composed dish with different flavors and textures.</p>
-                        <h5>What do you want people to feel or experience at Upton 43?</h5>
-                        <p>“I want people to leave having had an amazing experience but they don’t know why because everything was perfect – the food, the space, the service.  It’s not about me telling them what to feel but providing them an opportunity to relate and pull on memories from when they were younger.”</p>
-
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -433,10 +436,10 @@
                         <p>Chic atmosphere and Swedish-American cuisine. If possible, try to snag a seat at the Chef’s Table, to sample an adventurous prixe-fixe menu.</p>
 
                         <h5><a href="http://eskergrove.com" target="_blank">Esker Grove</a></h5>
-                        <p>A welcoming Cuban cafe with juicy Cubano sandwiches and invigorating coffee.</p>
+                        <p>The newest addition to Walker Art Center, it’s a place to people watch and sip cocktails or grab decadent brunch.</p>
 
                         <h5><a href="http://victors1959cafe.com" target="_blank">Victor’s 1959</a></h5>
-                        <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks.</p>
+                        <p>A welcoming Cuban cafe with juicy Cubano sandwiches and invigorating coffee.</p>
 
                         <h4>Stay:</h4>
 
@@ -451,7 +454,7 @@
                         <h5><a href="http://www.walkerart.org/" target="_blank">Walker Art Center</a></h5>
                         <p>This important Minneapolis art hub displays modern art, multimedia installations and video, along with lectures and events.</p>
 
-                        <h5><a href="http://www.asimn.org/" target="_blank">Walker Art Center</a></h5>
+                        <h5><a href="http://www.asimn.org/" target="_blank">American Swedish Institute</a></h5>
                         <p>This important Minneapolis art hub displays modern art, multimedia installations and video, along with lectures and events.</p>
 
                         <h5><a href="https://www.minneapolisparks.org/parks__destinations/parks__lakes/lake_calhoun_park/" target="_blank">Lake Calhoun</a></h5>
@@ -459,6 +462,14 @@
 
                         <h5><a href="http://first-avenue.com/" target="_blank">Concert at First Avenue</a></h5>
                         <p>Entertaining Minneapolis since 1970, the First Avenue is a popular live music ticket.</p>
+
+                        <h4>Shop:</h4>
+
+                        <h5><a href="https://shopidun.com/" target="_blank">Idun</a></h5>
+                        <p></p>
+
+                        <h5><a href="http://monawilliams.com/" target="_blank">Mona Williams</a></h5>
+                        <p></p>
 
 
                     </div>
