--- a/new-site/minneapolis/index.html
+++ b/new-site/minneapolis/index.html
@@ -466,10 +466,10 @@
                         <h4>Shop:</h4>
 
                         <h5><a href="https://shopidun.com/" target="_blank">Idun</a></h5>
-                        <p></p>
+                        <p>Inspiring and empowering women to wear what they find here with confidence.</p>
 
                         <h5><a href="http://monawilliams.com/" target="_blank">Mona Williams</a></h5>
-                        <p></p>
+                        <p>Womens contemporary apparel and accessories, a curated selection of designer vintage, fantastic gifts.</p>
 
 
                     </div>
